Descent into Darkness: northlands -> Northlands
See note for 1b2f468e

[ci skip]

--- a/data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg
@@ -118,7 +118,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "In truth, I share your hatred for the orcs. The northlands have been my... home... for many years, and the orcs have been a growing infestation in them. They despoil the beauty of the land wherever they go. If you are interested, I would be happy to take you on as my apprentice so that you can... aid me in the fight against them."
+            message= _ "In truth, I share your hatred for the orcs. The Northlands have been my... home... for many years, and the orcs have been a growing infestation in them. They despoil the beauty of the land wherever they go. If you are interested, I would be happy to take you on as my apprentice so that you can... aid me in the fight against them."
         [/message]
 
         [message]
