--- a/data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg
@@ -237,7 +237,7 @@
 
                 [message]
                     speaker=Tallin
-                    message= _ "Princess, we are not seeking to do business here: <i>“I do this for you and you do this for me.”</i> No, we seek to build everlasting friendships which will forever ensure the peace and prosperity of these northlands. Therefore, let there be no talk of debts and repayments between us."
+                    message= _ "Princess, we are not seeking to do business here: <i>“I do this for you and you do this for me.”</i> No, we seek to build everlasting friendships which will forever ensure the peace and prosperity of these Northlands. Therefore, let there be no talk of debts and repayments between us."
                 [/message]
 
                 [message]
