Sceptre of Fire: northlands -> Northlands
See note for 1b2f468e

[ci skip]

--- a/data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg
@@ -37,7 +37,7 @@
 
     [story]
         [part]
-            story= _ "The journey to the far northern wastelands was long and perilous. For the tunnels were winding and treacherous, and the paths were not safe from orcs, or worse. Nevertheless, they did reach the northlands, and began to search for the runesmith named Thursagan — the sage of fire."
+            story= _ "The journey to the far northern wastelands was long and perilous. For the tunnels were winding and treacherous, and the paths were not safe from orcs, or worse. Nevertheless, they did reach the Northlands, and began to search for the runesmith named Thursagan — the sage of fire."
         [/part]
     [/story]
 
@@ -221,7 +221,7 @@
         [/message]
         [message]
             speaker=Alanin
-            message= _ "Except for trolls and ogres, right? They live in the far northlands. They’re probably lurking around here somewhere."
+            message= _ "Except for trolls and ogres, right? They live in the far Northlands. They’re probably lurking around here somewhere."
         [/message]
         [message]
             speaker=Baglur
