--- a/data/campaigns/Sceptre_of_Fire/scenarios/3t_The_Council_Regathers.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/3t_The_Council_Regathers.cfg
@@ -132,7 +132,7 @@
         [/message]
         [message]
             speaker=Baglur
-            message= _ "Yes, we did. And that is Krawg, who helped us in the northlands."
+            message= _ "Yes, we did. And that is Krawg, who helped us in the Northlands."
         [/message]
         [message]
             speaker=Krawg
