--- a/data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg
@@ -104,7 +104,7 @@
         [/message]
         [message]
             speaker=Alanin
-            message= _ "Stand aside. I am Alanin, of Haldric’s royal guard, and I bring news from the northlands."
+            message= _ "Stand aside. I am Alanin, of Haldric’s royal guard, and I bring news from the Northlands."
         [/message]
         [message]
             speaker=Gatekeeper
@@ -127,7 +127,7 @@
         {MODIFY_UNIT id=Alanin profile "portraits/alanin-epilogue.png"}
         [message]
             speaker=Alanin
-            message= _ "My King, fifteen years ago you sent me on a mission into the northlands. I have returned. What do you wish to know of my mission?"
+            message= _ "My King, fifteen years ago you sent me on a mission into the Northlands. I have returned. What do you wish to know of my mission?"
         [/message]
         [message]
             speaker=Haldric II
