DW S12: fixed difficulty setting for spawns

--- a/data/campaigns/Dead_Water/scenarios/12_Revenge.cfg
+++ b/data/campaigns/Dead_Water/scenarios/12_Revenge.cfg
@@ -696,7 +696,7 @@
         {GENERIC_UNIT 5 ("Wraith") 37 1}
         {GENERIC_UNIT 5 ("Ghost") 38 1}
 #endif
-#ifdef HARD
+#ifdef NIGHTMARE
         {GENERIC_UNIT 5 ("Dread Bat") 29 1}
         {GENERIC_UNIT 5 ("Blood Bat") 24 1}
         {GENERIC_UNIT 5 ("Dread Bat") 26 1}
