Prepare Xcode project for MAc AppStore distribution

--- a/projectfiles/Xcode/Wesnoth.xcodeproj/xcshareddata/xcschemes/campaignd.xcscheme
+++ b/projectfiles/Xcode/Wesnoth.xcodeproj/xcshareddata/xcschemes/campaignd.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "B597C4970FACD3CD00CE81F5"
-               BuildableName = "unit_tests"
-               BlueprintName = "unit_tests"
+               BlueprintIdentifier = "91C548A01D8866ED00FE6A7B"
+               BuildableName = "campaignd"
+               BlueprintName = "campaignd"
                ReferencedContainer = "container:Wesnoth.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -32,9 +32,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B597C4970FACD3CD00CE81F5"
-            BuildableName = "unit_tests"
-            BlueprintName = "unit_tests"
+            BlueprintIdentifier = "91C548A01D8866ED00FE6A7B"
+            BuildableName = "campaignd"
+            BlueprintName = "campaignd"
             ReferencedContainer = "container:Wesnoth.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -46,39 +46,21 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
-      useCustomWorkingDirectory = "YES"
-      customWorkingDirectory = "$BUILT_PRODUCTS_DIR/Wesnoth.app/Contents/Resources"
+      useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
-      debugDocumentVersioning = "NO"
+      debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B597C4970FACD3CD00CE81F5"
-            BuildableName = "unit_tests"
-            BlueprintName = "unit_tests"
+            BlueprintIdentifier = "91C548A01D8866ED00FE6A7B"
+            BuildableName = "campaignd"
+            BlueprintName = "campaignd"
             ReferencedContainer = "container:Wesnoth.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <EnvironmentVariables>
-         <EnvironmentVariable
-            key = "DYLD_FALLBACK_FRAMEWORK_PATH"
-            value = "../../../TestFrameworks:../Frameworks"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "DYLD_FALLBACK_LIBRARY_PATH"
-            value = "../../../TestFrameworks:../Frameworks"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "DYLD_IMAGE_SUFFIX"
-            value = "-mt"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -92,9 +74,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B597C4970FACD3CD00CE81F5"
-            BuildableName = "unit_tests"
-            BlueprintName = "unit_tests"
+            BlueprintIdentifier = "91C548A01D8866ED00FE6A7B"
+            BuildableName = "campaignd"
+            BlueprintName = "campaignd"
             ReferencedContainer = "container:Wesnoth.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
